--- a/RealmModelGenerator/AttributeDetailView.xib
+++ b/RealmModelGenerator/AttributeDetailView.xib
@@ -5,15 +5,23 @@
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="9532"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="AttributeDetailView" customModule="RealmModelGenerator" customModuleProvider="target"/>
+        <customObject id="-2" userLabel="File's Owner" customClass="AttributeDetailView" customModule="RealmModelGenerator" customModuleProvider="target">
+            <connections>
+                <outlet property="nameTextField" destination="nt8-h9-QDa" id="q0Z-lF-Igx"/>
+            </connections>
+        </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="Hz6-mo-xeY">
             <rect key="frame" x="0.0" y="0.0" width="200" height="540"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3xQ-hn-hqv">
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="3xQ-hn-hqv">
                     <rect key="frame" x="6" y="514" width="58" height="17"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="54" id="6nx-Nv-Per"/>
+                        <constraint firstAttribute="height" constant="17" id="Od3-60-kMN"/>
+                    </constraints>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Attribute" id="DvD-ba-5VI">
                         <font key="font" metaFont="system" size="14"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -68,28 +76,28 @@
                 </popUpButton>
                 <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="goE-ZA-b9j">
                     <rect key="frame" x="64" y="453" width="63" height="18"/>
-                    <buttonCell key="cell" type="check" title="Ignored" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="aY5-zn-g1Q">
+                    <buttonCell key="cell" type="check" title="Ignored" bezelStyle="regularSquare" imagePosition="left" inset="2" id="aY5-zn-g1Q">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="smallSystem"/>
                     </buttonCell>
                 </button>
                 <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="l4p-Id-g72">
                     <rect key="frame" x="64" y="433" width="84" height="18"/>
-                    <buttonCell key="cell" type="check" title="Primary key" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="F2B-UM-daP">
+                    <buttonCell key="cell" type="check" title="Primary key" bezelStyle="regularSquare" imagePosition="left" inset="2" id="F2B-UM-daP">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="smallSystem"/>
                     </buttonCell>
                 </button>
                 <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="814-XZ-iyg">
                     <rect key="frame" x="131" y="453" width="65" height="18"/>
-                    <buttonCell key="cell" type="check" title="Indexed" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="EdX-Tg-uWO">
+                    <buttonCell key="cell" type="check" title="Indexed" bezelStyle="regularSquare" imagePosition="left" inset="2" id="EdX-Tg-uWO">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="smallSystem"/>
                     </buttonCell>
                 </button>
                 <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="isW-xR-GZI">
                     <rect key="frame" x="130" y="347" width="66" height="18"/>
-                    <buttonCell key="cell" type="check" title="Default" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="sOY-03-iF9">
+                    <buttonCell key="cell" type="check" title="Default" bezelStyle="regularSquare" imagePosition="left" inset="2" id="sOY-03-iF9">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="smallSystem"/>
                     </buttonCell>
@@ -109,6 +117,11 @@
                     </textFieldCell>
                 </textField>
             </subviews>
+            <constraints>
+                <constraint firstItem="3xQ-hn-hqv" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="8" id="Rab-ZS-ebK"/>
+                <constraint firstItem="3xQ-hn-hqv" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" constant="9" id="h3Y-72-lbX"/>
+            </constraints>
+            <point key="canvasLocation" x="9" y="234"/>
         </customView>
     </objects>
 </document>
