--- a/RealmModelGenerator/TitleCell.xib
+++ b/RealmModelGenerator/TitleCell.xib
@@ -18,21 +18,21 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ApS-rj-fAc">
-                    <rect key="frame" x="34" y="7" width="217" height="19"/>
-                    <textFieldCell key="cell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" title="Title" id="ieK-RM-G6c">
-                        <font key="font" size="13" name="Menlo-Regular"/>
+                    <rect key="frame" x="32" y="9" width="219" height="14"/>
+                    <textFieldCell key="cell" controlSize="small" lineBreakMode="truncatingTail" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" title="Title" id="ieK-RM-G6c">
+                        <font key="font" metaFont="smallSystem"/>
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="BzI-NG-lrh">
-                    <rect key="frame" x="8" y="6" width="20" height="20"/>
+                    <rect key="frame" x="8" y="8" width="18" height="18"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="20" id="eL4-Qh-HOE"/>
-                        <constraint firstAttribute="width" constant="20" id="shO-2l-2lL"/>
+                        <constraint firstAttribute="height" constant="18" id="eL4-Qh-HOE"/>
+                        <constraint firstAttribute="width" constant="18" id="shO-2l-2lL"/>
                     </constraints>
-                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="T" drawsBackground="YES" id="6T6-xB-gbP">
-                        <font key="font" size="13" name="Menlo-Regular"/>
+                    <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="T" drawsBackground="YES" id="6T6-xB-gbP">
+                        <font key="font" metaFont="system" size="12"/>
                         <color key="textColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
@@ -45,7 +45,7 @@
             </subviews>
             <constraints>
                 <constraint firstItem="ApS-rj-fAc" firstAttribute="centerY" secondItem="c22-O7-iKe" secondAttribute="centerY" id="7w0-FB-lsf"/>
-                <constraint firstItem="BzI-NG-lrh" firstAttribute="centerY" secondItem="c22-O7-iKe" secondAttribute="centerY" id="Nec-CO-4ZY"/>
+                <constraint firstItem="BzI-NG-lrh" firstAttribute="centerY" secondItem="c22-O7-iKe" secondAttribute="centerY" constant="-1" id="Nec-CO-4ZY"/>
                 <constraint firstItem="BzI-NG-lrh" firstAttribute="leading" secondItem="c22-O7-iKe" secondAttribute="leading" constant="8" id="fgK-63-iOw"/>
                 <constraint firstAttribute="trailing" secondItem="ApS-rj-fAc" secondAttribute="trailing" constant="8" id="key-ah-ZIX"/>
                 <constraint firstItem="ApS-rj-fAc" firstAttribute="leading" secondItem="BzI-NG-lrh" secondAttribute="trailing" constant="8" id="pMS-ev-j8K"/>
