--- a/RealmModelGenerator/AttributeDetailView.xib
+++ b/RealmModelGenerator/AttributeDetailView.xib
@@ -51,6 +51,9 @@
                         <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
+                    <connections>
+                        <outlet property="delegate" destination="-2" id="QdD-em-lR5"/>
+                    </connections>
                 </textField>
                 <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bw6-Pl-lQu">
                     <rect key="frame" x="63" y="345" width="65" height="22"/>
